<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/maven-v4_0_0.xsd">
	<properties>
		<neo4j.version>2025.10.1</neo4j.version>
		<java.version>21</java.version>
		<geotools.version>33.2</geotools.version>
		<spatial.test.osm.version>20100819</spatial.test.osm.version>
		<spatial.test.shp.version>20100819</spatial.test.shp.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
	</properties>

	<modelVersion>4.0.0</modelVersion>
	<artifactId>neo4j-spatial</artifactId>
	<groupId>org.neo4j</groupId>
	<version>2025.10.1-SNAPSHOT</version>
	<name>Neo4j - Spatial Components</name>
	<description>Spatial utilities and components for Neo4j</description>
	<url>https://neo4j.com/labs/neo4j-spatial/5/</url>
	<inceptionYear>2010</inceptionYear>
	<packaging>pom</packaging>

	<modules>
		<module>api</module>
		<module>geotools-common</module>
		<module>geotools-plugin</module>
		<module>test-utils</module>
		<module>server-plugin</module>
		<module>cli-tools</module>
		<module>doc-examples</module>
	</modules>

	<scm>
		<url>https://github.com/neo4j/spatial/</url>
		<connection>scm:git:git://github.com/neo4j/spatial.git</connection>
		<developerConnection>scm:git:git@github.com:neo4j/spatial.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<build>
		<plugins>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<threadCount>1</threadCount>
					<forkCount>1</forkCount>
					<reuseForks>false</reuseForks>
					<argLine>-server -Xms1024m -Xmx2048m</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<developers>
		<developer>
			<id>craigtaverner</id>
			<name>Craig Taverner</name>
			<email>craig [at] amanzi.com</email>
			<timezone>+1</timezone>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
		<developer>
			<id>svzdvd</id>
			<name>Davide Savazzi</name>
			<email>davide [at] davidesavazzi.net</email>
			<timezone>+1</timezone>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
		<developer>
			<id>peterneubauer</id>
			<name>Peter Neubauer</name>
			<email>neubauer.peter [at] gmail.com</email>
			<timezone>+1</timezone>
			<roles>
				<role>Developer</role>
			</roles>
		</developer>
		<developer>
			<id>Andy2003</id>
			<name>Andreas Berger</name>
			<email>andreas at berger-ecommerce.com</email>
			<roles>
				<role>Developer</role>
			</roles>
			<timezone>+1</timezone>
		</developer>
	</developers>
	<licenses>
		<license>
			<name>GNU General Public License, Version 3</name>
			<url>https://www.gnu.org/licenses/gpl-3.0-standalone.html</url>
			<comments>The software ("Software") developed and owned by Neo4j Sweden AB
				(referred to in this notice as "Neo4j") is licensed under the GNU
				GENERAL PUBLIC LICENSE Version 3 to all third parties and that license
				is included below.

				However, if you have executed an End User Software License and Services
				Agreement or an OEM Software License and Support Services Agreement, or
				another commercial license agreement with Neo4j or one of its
				affiliates (each, a "Commercial Agreement"), the terms of the license in
				such Commercial Agreement will supersede the GNU GENERAL PUBLIC LICENSE
				Version 3 and you may use the Software solely pursuant to the terms of
				the relevant Commercial Agreement.
			</comments>
		</license>
	</licenses>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.locationtech.jts</groupId>
				<artifactId>jts-core</artifactId>
				<version>1.20.0</version>
			</dependency>
			<dependency>
				<groupId>org.slf4j</groupId>
				<artifactId>slf4j-api</artifactId>
				<version>2.0.17</version>
			</dependency>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.18.0</version>
			</dependency>
			<dependency>
				<groupId>jakarta.annotation</groupId>
				<artifactId>jakarta.annotation-api</artifactId>
				<version>3.0.0</version>
			</dependency>
			<dependency>
				<groupId>javax.measure</groupId>
				<artifactId>unit-api</artifactId>
				<version>2.2</version>
			</dependency>
			<dependency>
				<groupId>com.google.errorprone</groupId>
				<artifactId>error_prone_annotations</artifactId>
				<version>2.41.0</version>
			</dependency>
			<dependency>
				<groupId>org.junit</groupId>
				<artifactId>junit-bom</artifactId>
				<version>5.14.1</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>OSGeo Release Repository</name>
			<url>https://repo.osgeo.org/repository/release/</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
		<repository>
			<id>neo4j-contrib-releases</id>
			<url>https://raw.github.com/neo4j-contrib/m2/master/releases</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<profiles>
		<profile>
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.3.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>test-default</id>
			<activation>
				<property>
					<name>env</name>
					<value>default</value>
				</property>
			</activation>
			<properties>
				<spatial.test.mode>default</spatial.test.mode>
			</properties>
		</profile>
		<profile>
			<id>test-short</id>
			<activation>
				<property>
					<name>env</name>
					<value>short</value>
				</property>
			</activation>
			<properties>
				<spatial.test.mode>short</spatial.test.mode>
			</properties>
		</profile>
		<profile>
			<id>test-dev</id>
			<activation>
				<property>
					<name>env</name>
					<value>dev</value>
				</property>
			</activation>
			<properties>
				<spatial.test.mode>dev</spatial.test.mode>
			</properties>
		</profile>
		<profile>
			<id>test-long</id>
			<activation>
				<property>
					<name>env</name>
					<value>long</value>
				</property>
			</activation>
			<properties>
				<spatial.test.mode>long</spatial.test.mode>
			</properties>
		</profile>
	</profiles>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<groups>
						<group>
							<title>GIS and Spatial</title>
							<packages>org.neo4j.gis:org.neo4j.gis.*</packages>
						</group>
					</groups>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>${maven-surefire-plugin.version}</version>
				<configuration>
					<argLine>-server -Xms512m -Xmx2G -XX:+UseConcMarkSweepGC -Djava.awt.headless=true</argLine>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

</project>

